# qwx

./: Cargo.toml  GEMINI.MD  LICENSE.MD  PRODUCT_REQUIREMENTS.md  README.md  SPECIFICATION.md  license.md  readme.md  todo.md
.gemini/: settings.json
src/: config.rs  display.rs  main.rs  model.rs
src/weather_api/: mod.rs  noaa_awc.rs  open_meteo.rs  owm_models.rs
tests/: cli_tests.rs
