[package]
name = "qwx"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
open-meteo-rs = "0.0.5" # Check for the latest version on crates.io
anyhow = "1"
chrono-tz = "0.8"
regex = "1"
directories = "5"
toml = "0.8"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
